docs/v0.3.0a3/_sources/reference/_autosummary/hpcflow.sdk.core.task_schema.TaskSchema.rst.txt
hpcflow.sdk.core.task_schema.TaskSchema
=======================================

.. currentmodule:: hpcflow.sdk.core.task_schema

.. autoclass:: TaskSchema
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~TaskSchema.add_parameter_dependency
      ~TaskSchema.from_json_like
      ~TaskSchema.get_action_parameter_flow
      ~TaskSchema.get_by_key
      ~TaskSchema.get_info_html
      ~TaskSchema.get_key
      ~TaskSchema.get_parameter_dependence
      ~TaskSchema.ignore_invalid_actions
      ~TaskSchema.make_persistent
      ~TaskSchema.to_dict
      ~TaskSchema.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TaskSchema.full_info
      ~TaskSchema.info
      ~TaskSchema.input_type_labels_map
      ~TaskSchema.input_types
      ~TaskSchema.multi_input_types
      ~TaskSchema.name
      ~TaskSchema.output_types
      ~TaskSchema.provides_parameters
      ~TaskSchema.task_template
      ~TaskSchema.objective
      ~TaskSchema.actions
      ~TaskSchema.method
      ~TaskSchema.implementation
      ~TaskSchema.inputs
      ~TaskSchema.outputs
      ~TaskSchema.parameter_class_modules
      ~TaskSchema.web_doc
      ~TaskSchema.environment_presets
      ~TaskSchema.doc
      ~TaskSchema.version
   
   